--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@ header {
   color: #FFFFFF;
 }
 
-#salmon{
-  margin-right: 300px;
+#logo {
+  width:150px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 nav {
@@ -27,15 +29,19 @@ nav {
   height: 500px;
 }
 
+#intro {
+  padding-top: 50px;
+  padding-left: 50px;
+}
+
 #firstSlogan {
-  text-align: left;
   font-family: 'PT Sans', sans-serif;
   text-shadow: 1px 2px 2px #B3ABA9;
-  margin: 80px, 0px, 0px, 40px;
+  background-color: #EEEEEE;
 }
 
 article {
-  height: 500px;
+  height: 350px;
 }
 
 .textAlignLeft {
@@ -50,6 +56,7 @@ article {
 }
 
 .imageAlignRight {
+  margin-top: 40px;
   float: right;
   margin-right: 150px;
 }
@@ -59,5 +66,40 @@ article {
   margin-left: 150px;
 }
 
+#slogan {
+  float: right;
+}
 
+.loclist {
+  list-style: none;
+  margin-left: 250px;
+  font-style: bold;
+  font-size: 20px;
+}
 
+.eventList {
+  list-style: none;
+  text-align: left;
+  margin-left: 250px;
+}
+
+.link {
+  text-decoration: none;
+  font-style: bold;
+  font-size: 20px;
+  color:#555;
+}
+
+#purchase {
+  margin-left: 150px;
+}
+
+#locations, #events {
+  background-color: #EEEEEE;
+}
+
+span {
+  font-size: 40px;
+  font-weight:bold;
+  text-shadow: 1px 2px 2px #B3ABA9;
+}
