--- a/style.css
+++ b/style.css
@@ -103,3 +103,29 @@ span {
   font-weight:bold;
   text-shadow: 1px 2px 2px #B3ABA9;
 }
+
+#styleguide {
+  text-decoration: none;
+  font-size: 40px;
+  color:black;
+}
+
+/*Animation code*/
+@keyframes swim {
+  0% {
+    transform: translateY(-50px) translateX(0) rotate(30deg);
+  }
+  25% {
+    transform: translateY(50px) translateX(250px) rotate(20deg);
+  }
+  50% {
+    transform: translateY(100px) translateX(500px);
+  }
+  75% {
+    transform: translateY(50px) translateX(850px) rotate(-20deg);
+  }
+  100% {
+    transform: translateY(-170px) translateX(1200px) rotate(-40deg);
+  }
+}
+
